chore(devcontainer): update dependencies, add gitdoc settings, and modify husky hooks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "i18n-ally.localesPaths": ["src/utils/locales"]
+  "i18n-ally.localesPaths": ["src/utils/locales"],
+  "gitdoc.enabled": true
 }
