--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "name": "'React+Vite",
+  "name": "React",
   "dockerComposeFile": ["docker-compose.yaml"],
   "service": "node",
   "workspaceFolder": "/home/vscode/app",
@@ -10,7 +10,7 @@
   ],
   "features": {
     "ghcr.io/devcontainers/features/git:1": {
-      "version": "2.39.0"
+      "version": "2.48.1"
     },
     "ghcr.io/devcontainers/features/aws-cli:1": {},
     "ghcr.io/devcontainers/features/common-utils:2": {
@@ -18,7 +18,7 @@
     },
     "ghcr.io/shyim/devcontainers-features/bun:0": {},
     "ghcr.io/devcontainers/features/node:1.5.0": {
-      "version": "20.16.0"
+      "version": "22.14.0"
     },
     "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
       "moby": false,
@@ -45,7 +45,8 @@
         "eamodio.gitlens",
         "ms-vscode.vscode-typescript-next",
         "redhat.vscode-yaml",
-        "tamasfe.even-better-toml"
+        "tamasfe.even-better-toml",
+        "vsls-contrib.gitdoc"
       ],
       "settings": {
         "betterTypeScriptErrors.prettify": true,
@@ -63,6 +64,16 @@
         "files.watcherExclude": {
           "**/node_modules/**": true
         },
+        "gitdoc.enabled": true,
+        "gitdoc.commitValidationLevel": "warning",
+        "gitdoc.autoCommitDelay": 30000,
+        "gitdoc.autPull": "onPush",
+        "gitdoc.autoPush": "onCommit",
+        "gitdoc.ai.model": "gpt-4o",
+        "gitdoc.autoPull": "onPush",
+        "gitdoc.ai.enabled": true,
+        "gitdoc.excludeBranches": ["master", "develop"],
+        "gitdoc.ai.customInstructions": "Generate a commit message in English following the Conventional Commits specification and `commitlint` rules. Use the format `<type>(<scope>): <short description>` and choose `<type>` from `build`, `ci`, `docs`, `feat`, `fix`, `perf`, `chore`, `refactor`, `revert`, `format`, `test`. Limit `<short description>` to 72 characters. If `<short description>` starts with an English word, it must be in lowercase.",
         "scm.defaultViewMode": "tree",
         "[javascript]": {
           "editor.defaultFormatter": "biomejs.biome"
